force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>This object is used to create the contract for the project. It could be Prime contract or Sub Contract</description>
    <label>BT Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>