force-app/main/default/objects/Contract__c/fields/Doc_Template__c.field-meta.xml
<CustomField>
    <fullName>Doc_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Quote_Template__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote_Template__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>