force-app/main/default/objects/Contract__c/fields/Revised_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revised_Contract_Amount__c</fullName>
    <formula>(Contract_Amount_Tax_Discount_SH__c + ( Contract_Amount_Tax_Discount_SH__c *  Tax_Rate__c )) + ( Shipping_Handling__c + Change_Order_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>